fix: card layout breaking on higher sizes

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -4,7 +4,7 @@
 
 .card {
   max-width: 435px;
-  flex: 1 1 21.5rem;
+  flex: 1 1 20.5rem;
   border-radius: 0.5rem;
   padding: 1.5rem;
   padding-top: 3rem;
